<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardUseCompatPadding="true"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:contentPadding="3dp"
        app:cardElevation="0dp"
        app:cardBackgroundColor="#AE31959E"
        android:layout_marginTop="20dp"
        app:cardCornerRadius="20dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:id="@+id/all_games_image"
                android:scaleType="fitXY"
                android:layout_weight="0.1"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:id="@+id/all_games_name"
                android:text="@string/headline"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:gravity="center"
                android:layout_weight="1"/>
            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/baseline_favorite_unliked"
                    android:layout_marginRight="20dp"
                    android:visibility="invisible"
                    android:layout_marginTop="30dp"
                    android:id="@+id/game_favorite_click"/>
                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/baseline_favorite_24"
                    android:visibility="invisible"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="30dp"
                    android:id="@+id/game_liked"/>

            </FrameLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="100dp">

            <TextView
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/release_date"
                android:textSize="15sp"
                android:textColor="@color/white"
                android:id="@+id/all_games_release"
                android:gravity="start"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:text="@string/rating"
                android:textColor="@color/white"
                android:id="@+id/all_games_rating"
                android:gravity="start"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:text="@string/available_platforms"
                android:id="@+id/all_games_platforms"
                android:textColor="@color/white"
                android:gravity="start"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:text="@string/genres"
                android:id="@+id/all_games_genres"
                android:textColor="@color/white"
                android:gravity="start"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:text="@string/stores"
                android:id="@+id/all_games_stores"
                android:textColor="@color/white"
                android:gravity="start"/>

        </LinearLayout>








    </androidx.cardview.widget.CardView>


</LinearLayout>